# ChangeLog for dev-ruby/safe_yaml
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/safe_yaml/ChangeLog,v 1.2 2013/07/31 04:52:03 mrueg Exp $

*safe_yaml-0.9.4-r1 (31 Jul 2013)

  31 Jul 2013; Manuel Rüger <mrueg@gentoo.org> +safe_yaml-0.9.4-r1.ebuild,
  -safe_yaml-0.9.4.ebuild:
  Fix USE=doc, fix dependencies

*safe_yaml-0.9.4 (26 Jul 2013)

  26 Jul 2013; Manuel Rüger <mrueg@gentoo.org> +metadata.xml,
  +safe_yaml-0.9.4.ebuild:
  Initial version, new dependency of dev-ruby/crack