@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST safe_yaml-0.9.4.gem 24576 SHA256 50516b2dd8f9fa9e4a3d2616de8d3565b2d4292e0191516c14c01a3f38a41e05 SHA512 934c8649872493b545c94c6f5361758b0ee57fe9b3e2f8d8566d070a182968eb1ff97fd73490332b835b988fca5d0716934f824a83b84005ce71871f53741c4b WHIRLPOOL 1cc4b99e074a7c0760592ed802af1a3c541a0ebe6b1de50a313ec45923a33b3a38c636f4a1aca4c23a091c2d07394330338b8939928cbf480b9448db851a9c81
+DIST safe_yaml-0.9.5.gem 25600 SHA256 f62a7f13eff175730fdca584af8e817491f4a6a6613dff27970577a7fcfd1277 SHA512 41f6ea9eeac760ab2bfaa7ae550a3ad39ddc9c0d7a17c02a48109c1217219340e14a8b1300b295e9b45dfa39538f3e9ec493a71800408f2dda6929bf1df5a498 WHIRLPOOL 906066828fd3150a04fc5066e3dea08769e56e9db243c5abc83a743b44771883bb91f0f8ea597abdba1dd8929c4da41ab620e0a0d361b3e48dd09a906a77bf59
 EBUILD safe_yaml-0.9.4-r1.ebuild 652 SHA256 cc9165a97186f60400ea8ab5cd2a164ed0ebf917c239aa15e3a875d3b8429921 SHA512 6174d11e88a5f0eaebe20fa50f4db70a280796538a906992f025f6dfdd231a3fe59cdc4018a541748bab331eeb7ece2fc78590919e1cd801d2c68169f44b35fb WHIRLPOOL 911791bb990bcaec1f6068f302f4fd9d8792b41270debfcc7a0ac49bca5f3acef9838ac1c76107b4b76e2afb15fde933f88d3c2491b27eeb5af28b02f26f66ee
-MISC ChangeLog 553 SHA256 8f612ede96da9b8c957e0b8048ece4105bcb05082543a3534936f69118e51e61 SHA512 920fc9f3a39c72800b153ecd345fd9a84f9ac56c3fc99b09174431f2eebb916c73d42883dae7685c6f57e65e3357de3e724e0813792b5e4aca8dac87fa4c6cf5 WHIRLPOOL c7d8d5a17d1ca56185414bf00bdd43e2a155001f288e181aa0a62ca2a68d7b0c9ee51073b35701ce76d8ffd07f5b3d264e68ba83b207d1202d00a1a99e78d2ae
+EBUILD safe_yaml-0.9.5.ebuild 650 SHA256 f04fc3a3b5e709218de2619ddd76829659afb533f0914010bd8ad60c38217fe2 SHA512 ee401264cdd26059122a98507036d7b95f9dee0f8db4aeca182eac29ec375db158c161e61147275605ca66b28bf93a08f8723eb4d7fc01098ef82e6c68a5b6f5 WHIRLPOOL a2e6b0581faa00e7c6b6b5e4eefd0ad565c432b512ab4bba143b6313cc8f834a9f64cd051a2ce76ee4b317d60fbceadc2f000bf0ed36363d598bf51a22bc57c9
+MISC ChangeLog 678 SHA256 ab6d319da1a51cd3221960fd6aa703e72f9dc78d05358582ffae35b96d916c6c SHA512 0cc8ca7f08645ca5f94922264d6aa1f9819dd8c371f5a0b20d3a666205ecac1eaac6b5f0485964b863a57e4e5e86b67928d92a2cff5fe2160f8379685ad2f754 WHIRLPOOL f7a47477726b8bce3252d964135e9206f32dd189256d02557138246c55e4ae2317a2b8f9a68b455208df3ad909166ac26ec9ce8edb5ea0b9171e270693e06350
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.20 (GNU/Linux)
+
+iF4EAREIAAYFAlIB6WsACgkQiIP6VqMIqNfs9gD+NI2GRRuw4wU289jkmc/vx03l
+dokysy+sMHYBN62r/QMA/3sv2fXfCpPi7UYe3ahXE/LTrrOM+u6EhpDmU3irIAT6
+=k3Fe
+-----END PGP SIGNATURE-----
