@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/safe_yaml
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/safe_yaml/ChangeLog,v 1.2 2013/07/31 04:52:03 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/safe_yaml/ChangeLog,v 1.3 2013/08/07 06:29:57 graaff Exp $
+
+*safe_yaml-0.9.5 (07 Aug 2013)
+
+  07 Aug 2013; Hans de Graaff <graaff@gentoo.org> +safe_yaml-0.9.5.ebuild:
+  Version bump.
 
 *safe_yaml-0.9.4-r1 (31 Jul 2013)
 
